--- a/Dummy.Tests/Dummy.Tests.fsproj
+++ b/Dummy.Tests/Dummy.Tests.fsproj
@@ -11,11 +11,15 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Include="Library.fs" />
+    <Compile Include="FizzBuzz Should.fs" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.2" />
+    <PackageReference Include="Archer.Arrow.Lib" Version="0.0.0.43" />
+    <PackageReference Include="Archer.Fletching.Lib" Version="0.0.0.32" />
+    <PackageReference Include="Archer.Logger.Lib" Version="0.0.0.5" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.6.3" />
+    <PackageReference Update="FSharp.Core" Version="7.0.300" />
   </ItemGroup>
 
   <ItemGroup>
