--- a/Lib/Archer.Quiver.Lib.fsproj
+++ b/Lib/Archer.Quiver.Lib.fsproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0</TargetFrameworks>
+    <TargetFramework>netstandard2.0</TargetFramework>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <AssemblyName>ArcherQuiverTestAdapter</AssemblyName>
     <Version>0.0.1</Version>
@@ -9,7 +9,7 @@
     <Description>A test executor to run Archer Tests</Description>
     <Copyright>© Robert Jason Kerney 2023</Copyright>
     <PackageProjectUrl>https://github.com/ArcherFSharpTesting/Archer.Quiver</PackageProjectUrl>
-    <PackageLicenseUrl></PackageLicenseUrl>
+    <PackageLicenseUrl>https://github.com/ArcherFSharpTesting/Archer.Quiver/blob/main/LICENSE</PackageLicenseUrl>
     <RepositoryUrl>https://github.com/ArcherFSharpTesting/Archer.Quiver</RepositoryUrl>
     <RepositoryType>GitHub</RepositoryType>
     <PackageTags>F# FSharp Test Testing Framework Unit UnitTest TestAdapter</PackageTags>
@@ -25,8 +25,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Archer.CoreTypes.Lib" Version="0.0.1" />
-    <PackageReference Include="Microsoft.TestPlatform.ObjectModel" Version="17.5.0" />
+    <PackageReference Include="Archer.Bow.Lib" Version="0.0.9.37" />
+    <PackageReference Include="Archer.CoreTypes.Lib" Version="0.0.13.42" />
+    <PackageReference Include="Archer.Logger.Lib" Version="0.0.0.5" />
+    <PackageReference Include="Microsoft.TestPlatform.ObjectModel" Version="17.6.3" />
+    <PackageReference Update="FSharp.Core" Version="7.0.300" />
   </ItemGroup>
 
 </Project>
