chore: crawling in the dark

--- a/Lib/Archer.Quiver.Lib.fsproj
+++ b/Lib/Archer.Quiver.Lib.fsproj
@@ -20,14 +20,18 @@
 
   <ItemGroup>
     <Compile Include="Literals.fs" />
+    <Compile Include="Globals.fs" />
+    <Compile Include="Messages.fs" />
     <Compile Include="TestGetter.fs" />
     <Compile Include="Types.fs" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Archer.Arrow.Lib" Version="0.0.0.43" />
     <PackageReference Include="Archer.Bow.Lib" Version="0.0.9.37" />
     <PackageReference Include="Archer.CoreTypes.Lib" Version="0.0.13.42" />
-    <PackageReference Include="Archer.Logger.Lib" Version="0.0.0.5" />
+    <PackageReference Include="Archer.Fletching.Lib" Version="0.0.0.33" />
+    <PackageReference Include="Archer.Logger.Lib" Version="0.0.0.6" />
     <PackageReference Include="Microsoft.TestPlatform.ObjectModel" Version="17.6.3" />
     <PackageReference Update="FSharp.Core" Version="7.0.300" />
   </ItemGroup>
