--- a/Dummy.Tests/Dummy.Tests.fsproj
+++ b/Dummy.Tests/Dummy.Tests.fsproj
@@ -16,8 +16,9 @@
 
   <ItemGroup>
     <PackageReference Include="Archer.Arrow.Lib" Version="0.0.0.43" />
-    <PackageReference Include="Archer.Fletching.Lib" Version="0.0.0.32" />
-    <PackageReference Include="Archer.Logger.Lib" Version="0.0.0.5" />
+    <PackageReference Include="Archer.CoreTypes.Lib" Version="0.0.13.42" />
+    <PackageReference Include="Archer.Fletching.Lib" Version="0.0.0.33" />
+    <PackageReference Include="Archer.Logger.Lib" Version="0.0.0.6" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.6.3" />
     <PackageReference Update="FSharp.Core" Version="7.0.300" />
   </ItemGroup>
