--- a/Dummy.Tests/Dummy.Tests.fsproj
+++ b/Dummy.Tests/Dummy.Tests.fsproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <PackageReference Include="Archer.Arrow.Lib" Version="0.0.0.43" />
+    <PackageReference Include="Archer.Bow.Lib" Version="0.0.9.37" />
     <PackageReference Include="Archer.CoreTypes.Lib" Version="0.0.13.42" />
     <PackageReference Include="Archer.Fletching.Lib" Version="0.0.0.33" />
     <PackageReference Include="Archer.Logger.Lib" Version="0.0.0.6" />
