chore: updated 'gittey undo'

--- a/gittey-config.json
+++ b/gittey-config.json
@@ -36,7 +36,7 @@
         },
         {
             "name": "undo",
-            "command": "git reset . && git checkout . && git clean -xfd"
+            "command": "git reset . && git checkout . && git clean -xfd && dotnet restore && dotnet build"
         }
     ],
     "collaborators": []
