--- a/Tests/Archer.Quiver.TestAdapter.Tests.fsproj
+++ b/Tests/Archer.Quiver.TestAdapter.Tests.fsproj
@@ -3,10 +3,18 @@
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <IsPackable>false</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
     <Compile Include="Library.fs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Archer.Arrow.Lib" Version="0.0.0.43" />
+    <PackageReference Include="Archer.CoreTypes.Lib" Version="0.0.13.42" />
+    <PackageReference Include="Archer.Fletching.Lib" Version="0.0.0.33" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.6.3" />
   </ItemGroup>
 
 </Project>
