--- a/TestAdapter/Archer.Quiver.TestAdapter.fsproj
+++ b/TestAdapter/Archer.Quiver.TestAdapter.fsproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <Compile Include="Library.fs" />
     <Compile Include="Setup.fs" />
+    <Compile Include="Source.fs" />
   </ItemGroup>
 
   <ItemGroup>
