--- a/Tests/Archer.Quiver.TestAdapter.Tests.fsproj
+++ b/Tests/Archer.Quiver.TestAdapter.Tests.fsproj
@@ -8,7 +8,8 @@
 
   <ItemGroup>
     <Compile Include="Library.fs" />
-    <Compile Include="Source Should.fs" />
+    <Compile Include="File System getDirectory Should.fs" />
+    <Compile Include="File System getPossibleTestFilesByGetter Should.fs" />
   </ItemGroup>
 
   <ItemGroup>
