--- a/TestAdapter/Archer.Quiver.TestAdapter.fsproj
+++ b/TestAdapter/Archer.Quiver.TestAdapter.fsproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <Compile Include="Setup.fs" />
+    <Compile Include="FileWrappers.fs" />
     <Compile Include="FileSystem.fs" />
   </ItemGroup>
 
