feat: starting to figure out loading of tests

--- a/TestAdapter/Archer.Quiver.TestAdapter.fsproj
+++ b/TestAdapter/Archer.Quiver.TestAdapter.fsproj
@@ -9,6 +9,7 @@
     <Compile Include="Setup.fs" />
     <Compile Include="FileWrappers.fs" />
     <Compile Include="FileSystem.fs" />
+    <Compile Include="AssemblySystem.fs" />
   </ItemGroup>
 
   <ItemGroup>
