--- a/Tests/Archer.Quiver.TestAdapter.Tests.fsproj
+++ b/Tests/Archer.Quiver.TestAdapter.Tests.fsproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Include="File System getDirectory Should.fs" />
+    <Compile Include="AssemblyLocator Should.fs" />
     <Compile Include="AssemblyLocator GetPossibleTestFiles Should.fs" />
   </ItemGroup>
 
