--- a/TestAdapter/Archer.Quiver.TestAdapter.fsproj
+++ b/TestAdapter/Archer.Quiver.TestAdapter.fsproj
@@ -10,7 +10,8 @@
     <Compile Include="FileWrappers.fs" />
     <Compile Include="FileSystem.fs" />
     <Compile Include="AssemblySystem.fs" />
-    <Compile Include="Discoverers.fs" />
+    <Compile Include="QuiverDiscoverer.fs" />
+    <Compile Include="QuiverExecutor.fs" />
   </ItemGroup>
 
   <ItemGroup>
