--- a/Tests/Archer.Quiver.TestAdapter.Tests.fsproj
+++ b/Tests/Archer.Quiver.TestAdapter.Tests.fsproj
@@ -19,6 +19,7 @@
 
   <ItemGroup>
     <Compile Include="FileLoader Should.fs" />
+    <Compile Include="TestLoader Should.fs" />
   </ItemGroup>
 
 </Project>
